# spectra

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  TECHNICAL_SPEC.md  demo.cast
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: ADOPTION.md  ANCHOR.md  ARCHITECTURE.md  BENCHMARK.md  BENCHMARK_DRIFT.md  CI_INTEGRATION.md  COMPETITIVE_BENCHMARK.md  CORPUS.md  FALSE_POSITIVES.md  MIGRATION.md  NON_GOALS.md  PAPER.md  REPLAY.md  ROADMAP.md  RULE_ENGINE.md  SEVERITY.md  SOLANA_EDGE_CASES.md  STRIDE_GAP_ANALYSIS.md  TESTING.md  THREAT_MODEL.md  VS_GIT_DIFF.md
examples/: lending_v1.json  lending_v2.json
examples/vault_baseline/src/: lib.rs
examples/vault_candidate/src/: lib.rs
scripts/: record-demo.sh
spectra-action/: README.md  action.yml
spectra-cli/: README.md  pyproject.toml
spectra-cli/spectra/: cli.py
spectra-core/: Cargo.toml
spectra-core/src/: accounts.rs  diff.rs  discriminator.rs  idl.rs  lib.rs  main.rs  regression.rs  report.rs
spectra-core/tests/: integration_test.rs
