[package]
name = "spectra-core"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
description = "Strictly-differential account-validation security-regression gate for Solana program upgrades"
repository = "https://github.com/ayodyadsr/spectra"
readme = "../README.md"

[lib]
name = "spectra_core"
path = "src/lib.rs"

[[bin]]
name = "spectra"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
walkdir = "2"
